Fri Nov 10 20:52:39 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: fixed quoting for double 'eval'.
	
Fri Nov 10 21:26:33 CET 2006 / Arjen de Korte <arjen@de-korte.org>

 - genericups: added debug statement to run driver in the foreground to
   make checking compatibility easier (no upsd required).
 - MAINTAINERS: added myself as maintainer of the genericups driver.

Fri Nov 10 04:39:42 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: install drivers and cgi scripts relative to $exec_prefix,
   not $prefix. Reported by Ralf Fassel.

Thu Nov  9 22:33:19 EST 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: Fix for tracker #303835: array subscript out of range.
   Reported by Ales Nosek and David Binderman.

Wed Nov  8 03:04:03 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: fix battery voltage in tripplite-hid subdriver
	
Thu Nov  2 23:36:50 EST 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: fixed improper use of sprintf with snprintf-style arguments,
   which was causing segfaults (Reported by Joseph Fradley and others)
 - tripplite_usb: increased read timeout (useful for later model OMNISMART
   units)

Tue Oct 31 20:47:08 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - NEWS: brought in sync with 2.0.4
 - INSTALL: complete installation requirements and instructions

Thu Oct 19 22:25:06 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: applied Anthony J. Ciani's patch for protocol 2001 support:

   "This patch adds support for TrippLite SMART550USB and some Omni models.

    Tested are On Line, On Battery, Battery Good, and Battery Bad indication.
    Everything else seems to work, but this UPS is attached to a critical
    system, and I can only do limited testing."

Thu Oct 19 22:19:00 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: better error handling and protocol reporting.
