@@ -1,3 +1,7 @@
+Wed Nov 15 06:55:07 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - libhid.c: improved formatting of usage paths
+	
 Fri Nov 10 20:52:39 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
 
  - configure.in: fixed quoting for double 'eval'.
